<resources>
    <string name="app_name">Loan Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="privacy">Privacy</string>
    <string name="about">About</string>

    <string name="loan_amount">Loan Amount</string>
    <string name="loan_term">Loan term in months</string>
    <string name="loan_interest_rate">Interest rate per year %</string>

    <string name="loan_Amount_userInput">5000</string>
    <string name="Loan_term_in_Months">60</string>
    <string name="interest_rate_per_year">4.5</string>

    <string name="hint_home_price">300000</string>


    <string name="monthly_payment">Monthly Payments</string>
    <string name="monthly_payment_result">Monthly payment</string>


    <string name="total_principal_paid">Total Principal Paid</string>
    <string name="total_interest_paid">Total Interest Paid</string>



    <string name="calculate">Calculate</string>
    <string name="monthly_payment_number">500</string>

    <string name="loan_calculator">Loan Calculator</string>
    <string name="mortgage_calculator">Mortgage Calculator</string>

    <string name="aboutPage_text">
    Loan Calculator is an easy to use and free loan estimate
        calculator.
    </string>

    <string name="privacy_text">
                Privacy and Policy
    </string>


    <string name="home_price">Home Price</string>

</resources>
